coded media query

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="wrapper">
       <div id="left">
         <h2>Welcome Back👋</h2>
-        <p>
+        <p class="para">
           Today is a new day.it's your day. You shape. <br />
           Sigh in to start managing yor projects.
         </p>
