did font more visible & image object fit

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             class="design"
             placeholder="At least 8 characters"
           />
-          <div>Forgot Password?</div>
+          <div class="fpass">Forgot Password?</div>
           <br />
           <button type="button" class="signinbtn">Sign in</button>
           <div class="divider">
